--- a/environment.yml
+++ b/environment.yml
@@ -5,93 +5,135 @@ channels:
   - r
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1=main
-  - _openmp_mutex=4.5=1_gnu
-  - blas=1.0=mkl
-  - bottleneck=1.3.2=py39hdd57654_1
-  - brotli=1.0.9=h7f98852_5
-  - brotli-bin=1.0.9=h7f98852_5
-  - ca-certificates=2021.10.8=ha878542_0
-  - certifi=2021.10.8=py39hf3d152e_1
-  - cycler=0.11.0=pyhd8ed1ab_0
-  - dbus=1.13.6=he372182_0
-  - expat=2.4.1=h9c3ff4c_0
-  - fontconfig=2.13.1=hba837de_1005
-  - fonttools=4.25.0=pyhd3eb1b0_0
-  - freetype=2.11.0=h70c0345_0
-  - glib=2.69.1=h5202010_0
-  - gst-plugins-base=1.14.0=hbbd80ab_1
-  - gstreamer=1.14.0=h28cd5cc_2
-  - icu=58.2=hf484d3e_1000
-  - intel-openmp=2021.4.0=h06a4308_3561
-  - jbig=2.1=h7f98852_2003
-  - joblib=1.1.0=pyhd8ed1ab_0
-  - jpeg=9d=h36c2ea0_0
-  - kiwisolver=1.3.1=py39h2531618_0
-  - lcms2=2.12=hddcbb42_0
-  - ld_impl_linux-64=2.35.1=h7274673_9
-  - lerc=2.2.1=h9c3ff4c_0
-  - libblas=3.9.0=12_linux64_mkl
-  - libbrotlicommon=1.0.9=h7f98852_5
-  - libbrotlidec=1.0.9=h7f98852_5
-  - libbrotlienc=1.0.9=h7f98852_5
-  - libcblas=3.9.0=12_linux64_mkl
-  - libdeflate=1.7=h7f98852_5
-  - libffi=3.3=he6710b0_2
-  - libgcc-ng=9.3.0=h5101ec6_17
-  - libgfortran-ng=11.2.0=h69a702a_11
-  - libgfortran5=11.2.0=h5c6108e_11
-  - libgomp=9.3.0=h5101ec6_17
-  - liblapack=3.9.0=12_linux64_mkl
-  - libpng=1.6.37=h21135ba_2
-  - libstdcxx-ng=9.3.0=hd4cf53a_17
-  - libtiff=4.3.0=hf544144_1
-  - libuuid=2.32.1=h7f98852_1000
-  - libwebp-base=1.2.0=h27cfd23_0
-  - libxcb=1.13=h7f98852_1003
-  - libxml2=2.9.12=h03d6c58_0
-  - lz4-c=1.9.3=h9c3ff4c_1
-  - matplotlib=3.5.0=py39hf3d152e_0
-  - matplotlib-base=3.5.0=py39h3ed280b_0
-  - mkl=2021.4.0=h06a4308_640
-  - mkl-service=2.4.0=py39h7f8727e_0
-  - mkl_fft=1.3.1=py39hd3c417c_0
-  - mkl_random=1.2.2=py39h51133e4_0
-  - munkres=1.1.4=pyh9f0ad1d_0
-  - ncurses=6.3=h7f8727e_2
-  - numexpr=2.7.3=py39h22e1b3c_1
-  - numpy=1.21.2=py39h20f2e39_0
-  - numpy-base=1.21.2=py39h79a1101_0
-  - olefile=0.46=pyh9f0ad1d_1
-  - openssl=1.1.1l=h7f8727e_0
-  - packaging=21.3=pyhd8ed1ab_0
-  - pandas=1.3.4=py39h8c16a72_0
-  - pcre=8.45=h9c3ff4c_0
-  - pillow=7.2.0=py39h6f3857e_2
-  - pip=21.2.4=py39h06a4308_0
-  - pthread-stubs=0.4=h36c2ea0_1001
-  - pyparsing=3.0.6=pyhd8ed1ab_0
-  - pyqt=5.9.2=py39h2531618_6
-  - python=3.9.7=h12debd9_1
-  - python-dateutil=2.8.2=pyhd3eb1b0_0
-  - python_abi=3.9=2_cp39
-  - pytz=2021.3=pyhd3eb1b0_0
-  - qt=5.9.7=h5867ecd_1
-  - readline=8.1=h27cfd23_0
-  - scikit-learn=0.24.2=py39h4dfa638_0
-  - scipy=1.5.3=py39hee8e79c_0
-  - setuptools=58.0.4=py39h06a4308_0
-  - sip=4.19.13=py39h2531618_0
-  - six=1.16.0=pyhd3eb1b0_0
-  - sqlite=3.36.0=hc218d9a_0
-  - threadpoolctl=3.0.0=pyh8a188c0_0
-  - tk=8.6.11=h1ccaba5_0
-  - tornado=6.1=py39h3811e60_1
-  - tzdata=2021e=hda174b7_0
-  - wheel=0.37.0=pyhd3eb1b0_1
-  - xorg-libxau=1.0.9=h7f98852_0
-  - xorg-libxdmcp=1.1.3=h7f98852_0
-  - xz=5.2.5=h7b6447c_0
-  - zlib=1.2.11=h7b6447c_3
-  - zstd=1.5.0=ha95c52a_0
+  - _libgcc_mutex=0.1
+  - _openmp_mutex=4.5
+  - alsa-lib=1.2.3
+  - brotli=1.0.9
+  - brotli-bin=1.0.9
+  - bzip2=1.0.8
+  - ca-certificates=2021.10.8
+  - certifi=2021.10.8
+  - cycler=0.11.0
+  - dbus=1.13.6
+  - expat=2.4.7
+  - font-ttf-dejavu-sans-mono=2.37
+  - font-ttf-inconsolata=3.000
+  - font-ttf-source-code-pro=2.038
+  - font-ttf-ubuntu=0.83
+  - fontconfig=2.13.96
+  - fonts-conda-ecosystem=1
+  - fonts-conda-forge=1
+  - fonttools=4.30.0
+  - freetype=2.10.4
+  - gettext=0.19.8.1
+  - giflib=5.2.1
+  - gst-plugins-base=1.18.5
+  - gstreamer=1.18.5
+  - icu=69.1
+  - jbig=2.1
+  - joblib=1.1.0
+  - jpeg=9e
+  - keyutils=1.6.1
+  - kiwisolver=1.4.0
+  - krb5=1.19.3
+  - lcms2=2.12
+  - ld_impl_linux-64=2.36.1
+  - lerc=3.0
+  - libblas=3.9.0
+  - libbrotlicommon=1.0.9
+  - libbrotlidec=1.0.9
+  - libbrotlienc=1.0.9
+  - libcblas=3.9.0
+  - libclang=13.0.1
+  - libdeflate=1.10
+  - libedit=3.1.20191231
+  - libevent=2.1.10
+  - libffi=3.4.2
+  - libgcc-ng=11.2.0
+  - libgfortran-ng=11.2.0
+  - libgfortran5=11.2.0
+  - libglib=2.70.2
+  - libgomp=11.2.0
+  - libiconv=1.16
+  - liblapack=3.9.0
+  - libllvm13=13.0.1
+  - libnsl=2.0.0
+  - libogg=1.3.4
+  - libopenblas=0.3.18
+  - libopus=1.3.1
+  - libpng=1.6.37
+  - libpq=14.2
+  - libstdcxx-ng=11.2.0
+  - libtiff=4.3.0
+  - libuuid=2.32.1
+  - libvorbis=1.3.7
+  - libwebp=1.2.2
+  - libwebp-base=1.2.2
+  - libxcb=1.13
+  - libxkbcommon=1.0.3
+  - libxml2=2.9.12
+  - libzlib=1.2.11
+  - lz4-c=1.9.3
+  - matplotlib=3.5.1
+  - matplotlib-base=3.5.1
+  - munkres=1.1.4
+  - mysql-common=8.0.28
+  - mysql-libs=8.0.28
+  - ncurses=6.3
+  - nspr=4.32
+  - nss=3.74
+  - numpy=1.22.3
+  - openjpeg=2.4.0
+  - openssl=1.1.1l
+  - packaging=21.3
+  - pandas=1.4.1
+  - patsy=0.5.2
+  - pcre=8.45
+  - pillow=9.0.1
+  - pip=22.0.4
+  - pthread-stubs=0.4
+  - pyparsing=3.0.7
+  - pyqt=5.12.3
+  - pyqt-impl=5.12.3
+  - pyqt5-sip=4.19.18
+  - pyqtchart=5.12
+  - pyqtwebengine=5.12.1
+  - python=3.9.10
+  - python-dateutil=2.8.2
+  - python_abi=3.9
+  - pytz=2021.3
+  - qt=5.12.9
+  - readline=8.1
+  - scikit-learn=1.0.2
+  - seaborn=0.11.2
+  - seaborn-base=0.11.2
+  - setuptools=60.9.3
+  - six=1.16.0
+  - sqlite=3.37.0
+  - threadpoolctl=3.1.0
+  - tk=8.6.12
+  - tornado=6.1
+  - tzdata=2021e
+  - unicodedata2=14.0.0
+  - wheel=0.37.1
+  - xorg-libxau=1.0.9
+  - xorg-libxdmcp=1.1.3
+  - xz=5.2.5
+  - zlib=1.2.11
+  - zstd=1.5.2
+  - pip:
+    - cffi==1.15.0
+    - clarite==2.2.0
+    - click==8.0.4
+    - coloredlogs==15.0.1
+    - cyvcf2==0.30.15
+    - humanfriendly==10.0
+    - jinja2==3.0.3
+    - markupsafe==2.1.1
+    - pandas-genomics==0.11.0
+    - pycparser==2.21
+    - rpy2==3.4.5
+    - scipy==1.6.3
+    - statsmodels==0.12.2
+    - tzlocal==2.1
 prefix: /home/tomas/anaconda3/envs/farmer_welder
