--- a/environment.yml
+++ b/environment.yml
@@ -7,6 +7,9 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
+  - backcall=0.2.0
+  - backports=1.0
+  - backports.functools_lru_cache=1.6.4
   - blas=1.0
   - bottleneck=1.3.2
   - brotli=1.0.9
@@ -15,6 +18,9 @@ dependencies:
   - certifi=2021.10.8
   - cycler=0.11.0
   - dbus=1.13.6
+  - debugpy=1.5.1
+  - decorator=5.1.1
+  - entrypoints=0.4
   - expat=2.4.1
   - fontconfig=2.13.1
   - fonttools=4.25.0
@@ -24,9 +30,14 @@ dependencies:
   - gstreamer=1.14.0
   - icu=58.2
   - intel-openmp=2021.4.0
+  - ipykernel=6.9.0
+  - ipython=7.31.1
   - jbig=2.1
+  - jedi=0.18.1
   - joblib=1.1.0
   - jpeg=9d
+  - jupyter_client=7.1.2
+  - jupyter_core=4.9.1
   - kiwisolver=1.3.1
   - lcms2=2.12
   - ld_impl_linux-64=2.35.1
@@ -44,6 +55,7 @@ dependencies:
   - libgomp=9.3.0
   - liblapack=3.9.0
   - libpng=1.6.37
+  - libsodium=1.0.18
   - libstdcxx-ng=9.3.0
   - libtiff=4.3.0
   - libuuid=2.32.1
@@ -53,29 +65,38 @@ dependencies:
   - lz4-c=1.9.3
   - matplotlib=3.5.0
   - matplotlib-base=3.5.0
+  - matplotlib-inline=0.1.3
   - mkl=2021.4.0
   - mkl-service=2.4.0
   - mkl_fft=1.3.1
   - mkl_random=1.2.2
   - munkres=1.1.4
   - ncurses=6.3
+  - nest-asyncio=1.5.4
   - numexpr=2.7.3
   - numpy=1.21.2
   - numpy-base=1.21.2
   - olefile=0.46
-  - openssl=1.1.1l
+  - openssl=1.1.1m
   - packaging=21.3
   - pandas=1.3.4
+  - parso=0.8.3
   - pcre=8.45
+  - pexpect=4.8.0
+  - pickleshare=0.7.5
   - pillow=7.2.0
   - pip=21.2.4
+  - prompt-toolkit=3.0.27
   - pthread-stubs=0.4
+  - ptyprocess=0.7.0
+  - pygments=2.11.2
   - pyparsing=3.0.6
   - pyqt=5.9.2
   - python=3.9.7
   - python-dateutil=2.8.2
   - python_abi=3.9
   - pytz=2021.3
+  - pyzmq=19.0.2
   - qt=5.9.7
   - readline=8.1
   - scikit-learn=0.24.2
@@ -87,11 +108,14 @@ dependencies:
   - threadpoolctl=3.0.0
   - tk=8.6.11
   - tornado=6.1
+  - traitlets=5.1.1
   - tzdata=2021e
+  - wcwidth=0.2.5
   - wheel=0.37.0
   - xorg-libxau=1.0.9
   - xorg-libxdmcp=1.1.3
   - xz=5.2.5
+  - zeromq=4.3.4
   - zlib=1.2.11
   - zstd=1.5.0
 prefix: /home/tomas/anaconda3/envs/farmer_welder
