--- a/environment.yml
+++ b/environment.yml
@@ -7,115 +7,334 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
+  - _r-mutex=1.0.1
+  - alsa-lib=1.2.3
+  - asttokens=2.0.5
   - backcall=0.2.0
   - backports=1.0
   - backports.functools_lru_cache=1.6.4
-  - blas=1.0
-  - bottleneck=1.3.2
+  - binutils_impl_linux-64=2.36.1
+  - binutils_linux-64=2.36
   - brotli=1.0.9
   - brotli-bin=1.0.9
+  - bwidget=1.9.14
+  - bzip2=1.0.8
+  - c-ares=1.18.1
   - ca-certificates=2021.10.8
+  - cairo=1.16.0
   - certifi=2021.10.8
+  - curl=7.81.0
   - cycler=0.11.0
   - dbus=1.13.6
   - debugpy=1.5.1
   - decorator=5.1.1
   - entrypoints=0.4
-  - expat=2.4.1
-  - fontconfig=2.13.1
-  - fonttools=4.25.0
-  - freetype=2.11.0
-  - glib=2.69.1
-  - gst-plugins-base=1.14.0
-  - gstreamer=1.14.0
-  - icu=58.2
-  - intel-openmp=2021.4.0
-  - ipykernel=6.9.0
-  - ipython=7.31.1
+  - executing=0.8.2
+  - expat=2.4.4
+  - font-ttf-dejavu-sans-mono=2.37
+  - font-ttf-inconsolata=3.000
+  - font-ttf-source-code-pro=2.038
+  - font-ttf-ubuntu=0.83
+  - fontconfig=2.13.96
+  - fonts-conda-ecosystem=1
+  - fonts-conda-forge=1
+  - fonttools=4.29.1
+  - freetype=2.10.4
+  - fribidi=1.0.10
+  - gcc_impl_linux-64=9.4.0
+  - gcc_linux-64=9.4.0
+  - gettext=0.19.8.1
+  - gfortran_impl_linux-64=9.4.0
+  - gfortran_linux-64=9.4.0
+  - giflib=5.2.1
+  - graphite2=1.3.13
+  - gsl=2.7
+  - gst-plugins-base=1.18.5
+  - gstreamer=1.18.5
+  - gxx_impl_linux-64=9.4.0
+  - gxx_linux-64=9.4.0
+  - harfbuzz=3.4.0
+  - icu=69.1
+  - ipykernel=6.9.1
+  - ipython=8.0.1
   - jbig=2.1
   - jedi=0.18.1
   - joblib=1.1.0
-  - jpeg=9d
+  - jpeg=9e
   - jupyter_client=7.1.2
-  - jupyter_core=4.9.1
-  - kiwisolver=1.3.1
+  - jupyter_core=4.9.2
+  - kernel-headers_linux-64=2.6.32
+  - kiwisolver=1.3.2
+  - krb5=1.19.2
   - lcms2=2.12
-  - ld_impl_linux-64=2.35.1
-  - lerc=2.2.1
+  - ld_impl_linux-64=2.36.1
+  - lerc=3.0
   - libblas=3.9.0
   - libbrotlicommon=1.0.9
   - libbrotlidec=1.0.9
   - libbrotlienc=1.0.9
   - libcblas=3.9.0
-  - libdeflate=1.7
-  - libffi=3.3
-  - libgcc-ng=9.3.0
+  - libclang=13.0.1
+  - libcurl=7.81.0
+  - libdeflate=1.10
+  - libedit=3.1.20191231
+  - libev=4.33
+  - libevent=2.1.10
+  - libffi=3.4.2
+  - libgcc-devel_linux-64=9.4.0
+  - libgcc-ng=11.2.0
   - libgfortran-ng=11.2.0
   - libgfortran5=11.2.0
-  - libgomp=9.3.0
+  - libglib=2.70.2
+  - libgomp=11.2.0
+  - libiconv=1.16
+  - libimagequant=2.17.0
   - liblapack=3.9.0
+  - libllvm13=13.0.1
+  - libnghttp2=1.46.0
+  - libnsl=2.0.0
+  - libogg=1.3.4
+  - libopenblas=0.3.18
+  - libopus=1.3.1
   - libpng=1.6.37
+  - libpq=14.2
+  - libsanitizer=9.4.0
   - libsodium=1.0.18
-  - libstdcxx-ng=9.3.0
+  - libssh2=1.10.0
+  - libstdcxx-devel_linux-64=9.4.0
+  - libstdcxx-ng=11.2.0
   - libtiff=4.3.0
   - libuuid=2.32.1
-  - libwebp-base=1.2.0
+  - libvorbis=1.3.7
+  - libwebp=1.2.2
+  - libwebp-base=1.2.2
   - libxcb=1.13
+  - libxkbcommon=1.0.3
   - libxml2=2.9.12
+  - libzlib=1.2.11
   - lz4-c=1.9.3
-  - matplotlib=3.5.0
-  - matplotlib-base=3.5.0
+  - make=4.3
+  - matplotlib=3.5.1
+  - matplotlib-base=3.5.1
   - matplotlib-inline=0.1.3
-  - mkl=2021.4.0
-  - mkl-service=2.4.0
-  - mkl_fft=1.3.1
-  - mkl_random=1.2.2
   - munkres=1.1.4
+  - mysql-common=8.0.28
+  - mysql-libs=8.0.28
   - ncurses=6.3
   - nest-asyncio=1.5.4
-  - numexpr=2.7.3
-  - numpy=1.21.2
-  - numpy-base=1.21.2
-  - olefile=0.46
-  - openssl=1.1.1m
+  - nspr=4.32
+  - nss=3.74
+  - numpy=1.22.2
+  - openjpeg=2.4.0
+  - openssl=1.1.1l
   - packaging=21.3
-  - pandas=1.3.4
+  - pandas=1.4.1
+  - pango=1.48.10
   - parso=0.8.3
   - pcre=8.45
+  - pcre2=10.37
   - pexpect=4.8.0
   - pickleshare=0.7.5
-  - pillow=7.2.0
-  - pip=21.2.4
+  - pillow=9.0.1
+  - pip=22.0.3
+  - pixman=0.40.0
   - prompt-toolkit=3.0.27
   - pthread-stubs=0.4
   - ptyprocess=0.7.0
+  - pure_eval=0.2.2
   - pygments=2.11.2
-  - pyparsing=3.0.6
-  - pyqt=5.9.2
-  - python=3.9.7
+  - pyparsing=3.0.7
+  - pyqt=5.12.3
+  - pyqt-impl=5.12.3
+  - pyqt5-sip=4.19.18
+  - pyqtchart=5.12
+  - pyqtwebengine=5.12.1
+  - python=3.10.2
   - python-dateutil=2.8.2
-  - python_abi=3.9
+  - python_abi=3.10
   - pytz=2021.3
-  - pyzmq=19.0.2
-  - qt=5.9.7
+  - pyzmq=22.3.0
+  - qt=5.12.9
+  - r-abind=1.4_5
+  - r-assertthat=0.2.1
+  - r-backports=1.4.1
+  - r-base=4.1.2
+  - r-base64enc=0.1_3
+  - r-bit=4.0.4
+  - r-bit64=4.0.5
+  - r-boot=1.3_28
+  - r-brio=1.1.3
+  - r-broom=0.7.12
+  - r-callr=3.7.0
+  - r-car=3.0_12
+  - r-cardata=3.0_5
+  - r-caret=6.0_90
+  - r-cellranger=1.1.0
+  - r-class=7.3_20
+  - r-cli=3.2.0
+  - r-clipr=0.7.1
+  - r-cluster=2.1.2
+  - r-codetools=0.2_18
+  - r-colorspace=2.0_2
+  - r-conquer=1.2.1
+  - r-cpp11=0.4.2
+  - r-crayon=1.5.0
+  - r-crosstalk=1.2.0
+  - r-curl=4.3.2
+  - r-data.table=1.14.2
+  - r-desc=1.4.0
+  - r-diffobj=0.3.5
+  - r-digest=0.6.29
+  - r-dplyr=1.0.7
+  - r-dt=0.20
+  - r-e1071=1.7_9
+  - r-ellipse=0.4.2
+  - r-ellipsis=0.3.2
+  - r-evaluate=0.14
+  - r-factominer=2.4
+  - r-fansi=1.0.2
+  - r-farver=2.1.0
+  - r-fastmap=1.1.0
+  - r-flashclust=1.01_2
+  - r-forcats=0.5.1
+  - r-foreach=1.5.2
+  - r-foreign=0.8_82
+  - r-future=1.23.0
+  - r-future.apply=1.8.1
+  - r-generics=0.1.2
+  - r-ggplot2=3.3.5
+  - r-ggrepel=0.9.1
+  - r-globals=0.14.0
+  - r-glue=1.6.1
+  - r-gower=1.0.0
+  - r-gtable=0.3.0
+  - r-haven=2.4.3
+  - r-highr=0.9
+  - r-hms=1.1.1
+  - r-htmltools=0.5.2
+  - r-htmlwidgets=1.5.4
+  - r-ipred=0.9_12
+  - r-isoband=0.2.5
+  - r-iterators=1.0.14
+  - r-jquerylib=0.1.4
+  - r-jsonlite=1.7.3
+  - r-kernsmooth=2.23_20
+  - r-knitr=1.37
+  - r-labeling=0.4.2
+  - r-later=1.2.0
+  - r-lattice=0.20_45
+  - r-lava=1.6.10
+  - r-lazyeval=0.2.2
+  - r-leaps=3.1
+  - r-lifecycle=1.0.1
+  - r-listenv=0.8.0
+  - r-lme4=1.1_27.1
+  - r-lubridate=1.8.0
+  - r-magrittr=2.0.2
+  - r-maptools=1.1_2
+  - r-mass=7.3_55
+  - r-matrix=1.4_0
+  - r-matrixmodels=0.5_0
+  - r-matrixstats=0.61.0
+  - r-mgcv=1.8_38
+  - r-minqa=1.2.4
+  - r-modelmetrics=1.2.2.2
+  - r-munsell=0.5.0
+  - r-nlme=3.1_155
+  - r-nloptr=1.2.2.3
+  - r-nnet=7.3_17
+  - r-numderiv=2016.8_1.1
+  - r-openxlsx=4.2.5
+  - r-parallelly=1.30.0
+  - r-pbkrtest=0.5.1
+  - r-pillar=1.7.0
+  - r-pkgconfig=2.0.3
+  - r-pkgload=1.2.4
+  - r-plyr=1.8.6
+  - r-praise=1.0.0
+  - r-prettyunits=1.1.1
+  - r-proc=1.18.0
+  - r-processx=3.5.2
+  - r-prodlim=2019.11.13
+  - r-progress=1.2.2
+  - r-progressr=0.10.0
+  - r-promises=1.2.0.1
+  - r-proxy=0.4_26
+  - r-ps=1.6.0
+  - r-purrr=0.3.4
+  - r-quantreg=5.88
+  - r-r6=2.5.1
+  - r-rcolorbrewer=1.1_2
+  - r-rcpp=1.0.8
+  - r-rcpparmadillo=0.10.8.1.0
+  - r-rcppeigen=0.3.3.9.1
+  - r-readr=2.1.2
+  - r-readxl=1.3.1
+  - r-recipes=0.1.17
+  - r-rematch=1.0.1
+  - r-rematch2=2.1.2
+  - r-reshape2=1.4.4
+  - r-rio=0.5.29
+  - r-rlang=0.4.12
+  - r-rpart=4.1.16
+  - r-rprojroot=2.0.2
+  - r-rstudioapi=0.13
+  - r-scales=1.1.1
+  - r-scatterplot3d=0.3_41
+  - r-sp=1.4_6
+  - r-sparsem=1.81
+  - r-squarem=2021.1
+  - r-statmod=1.4.36
+  - r-stringi=1.7.6
+  - r-stringr=1.4.0
+  - r-survival=3.2_13
+  - r-testthat=3.1.2
+  - r-tibble=3.1.6
+  - r-tidyr=1.2.0
+  - r-tidyselect=1.1.1
+  - r-timedate=3043.102
+  - r-tzdb=0.2.0
+  - r-utf8=1.2.2
+  - r-vctrs=0.3.8
+  - r-viridislite=0.4.0
+  - r-vroom=1.5.7
+  - r-waldo=0.3.1
+  - r-withr=2.4.3
+  - r-xfun=0.29
+  - r-yaml=2.2.2
+  - r-zip=2.2.0
   - readline=8.1
-  - scikit-learn=0.24.2
-  - scipy=1.5.3
-  - setuptools=58.0.4
-  - sip=4.19.13
+  - scikit-learn=1.0.2
+  - scipy=1.8.0
+  - sed=4.8
+  - setuptools=60.9.1
   - six=1.16.0
-  - sqlite=3.36.0
-  - threadpoolctl=3.0.0
+  - sqlite=3.37.0
+  - stack_data=0.2.0
+  - sysroot_linux-64=2.12
+  - threadpoolctl=3.1.0
   - tk=8.6.11
+  - tktable=2.10
   - tornado=6.1
   - traitlets=5.1.1
   - tzdata=2021e
+  - unicodedata2=14.0.0
   - wcwidth=0.2.5
-  - wheel=0.37.0
+  - wheel=0.37.1
+  - xorg-kbproto=1.0.7
+  - xorg-libice=1.0.10
+  - xorg-libsm=1.2.3
+  - xorg-libx11=1.7.2
   - xorg-libxau=1.0.9
   - xorg-libxdmcp=1.1.3
+  - xorg-libxext=1.3.4
+  - xorg-libxrender=0.9.10
+  - xorg-libxt=1.2.1
+  - xorg-renderproto=0.11.1
+  - xorg-xextproto=7.3.0
+  - xorg-xproto=7.0.31
   - xz=5.2.5
   - zeromq=4.3.4
   - zlib=1.2.11
-  - zstd=1.5.0
-prefix: /home/tomas/anaconda3/envs/farmer_welder
+  - zstd=1.5.2
+prefix: /home/tomas/miniconda3/envs/farmer_welder
