--- a/environment.yml
+++ b/environment.yml
@@ -5,135 +5,121 @@ channels:
   - r
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1
-  - _openmp_mutex=4.5
-  - alsa-lib=1.2.3
-  - brotli=1.0.9
-  - brotli-bin=1.0.9
-  - bzip2=1.0.8
-  - ca-certificates=2021.10.8
-  - certifi=2021.10.8
-  - cycler=0.11.0
-  - dbus=1.13.6
-  - expat=2.4.7
-  - font-ttf-dejavu-sans-mono=2.37
-  - font-ttf-inconsolata=3.000
-  - font-ttf-source-code-pro=2.038
-  - font-ttf-ubuntu=0.83
-  - fontconfig=2.13.96
-  - fonts-conda-ecosystem=1
-  - fonts-conda-forge=1
-  - fonttools=4.30.0
-  - freetype=2.10.4
-  - gettext=0.19.8.1
-  - giflib=5.2.1
-  - gst-plugins-base=1.18.5
-  - gstreamer=1.18.5
-  - icu=69.1
-  - jbig=2.1
-  - joblib=1.1.0
-  - jpeg=9e
-  - keyutils=1.6.1
-  - kiwisolver=1.4.0
-  - krb5=1.19.3
-  - lcms2=2.12
-  - ld_impl_linux-64=2.36.1
   - lerc=3.0
-  - libblas=3.9.0
-  - libbrotlicommon=1.0.9
-  - libbrotlidec=1.0.9
-  - libbrotlienc=1.0.9
-  - libcblas=3.9.0
-  - libclang=13.0.1
-  - libdeflate=1.10
-  - libedit=3.1.20191231
   - libevent=2.1.10
-  - libffi=3.4.2
-  - libgcc-ng=11.2.0
-  - libgfortran-ng=11.2.0
-  - libgfortran5=11.2.0
-  - libglib=2.70.2
   - libgomp=11.2.0
-  - libiconv=1.16
-  - liblapack=3.9.0
-  - libllvm13=13.0.1
-  - libnsl=2.0.0
-  - libogg=1.3.4
-  - libopenblas=0.3.18
-  - libopus=1.3.1
-  - libpng=1.6.37
-  - libpq=14.2
-  - libstdcxx-ng=11.2.0
-  - libtiff=4.3.0
-  - libuuid=2.32.1
-  - libvorbis=1.3.7
-  - libwebp=1.2.2
-  - libwebp-base=1.2.2
-  - libxcb=1.13
-  - libxkbcommon=1.0.3
-  - libxml2=2.9.12
-  - libzlib=1.2.11
-  - lz4-c=1.9.3
-  - matplotlib=3.5.1
-  - matplotlib-base=3.5.1
-  - munkres=1.1.4
-  - mysql-common=8.0.28
-  - mysql-libs=8.0.28
-  - ncurses=6.3
-  - nspr=4.32
-  - nss=3.74
-  - numpy=1.22.3
-  - openjpeg=2.4.0
-  - openssl=1.1.1l
-  - packaging=21.3
-  - pandas=1.4.1
-  - patsy=0.5.2
-  - pcre=8.45
-  - pillow=9.0.1
-  - pip=22.0.4
-  - pthread-stubs=0.4
-  - pyparsing=3.0.7
-  - pyqt=5.12.3
-  - pyqt-impl=5.12.3
-  - pyqt5-sip=4.19.18
-  - pyqtchart=5.12
-  - pyqtwebengine=5.12.1
-  - python=3.9.10
-  - python-dateutil=2.8.2
-  - python_abi=3.9
+  - libgfortran5=11.2.0
+  - giflib=5.2.1
   - pytz=2021.3
-  - qt=5.12.9
-  - readline=8.1
-  - scikit-learn=1.0.2
-  - seaborn=0.11.2
-  - seaborn-base=0.11.2
-  - setuptools=60.9.3
-  - six=1.16.0
-  - sqlite=3.37.0
-  - threadpoolctl=3.1.0
-  - tk=8.6.12
-  - tornado=6.1
-  - tzdata=2021e
-  - unicodedata2=14.0.0
-  - wheel=0.37.1
+  - munkres=1.1.4
+  - openssl
   - xorg-libxau=1.0.9
-  - xorg-libxdmcp=1.1.3
-  - xz=5.2.5
-  - zlib=1.2.11
+  - certifi
+  - fonts-conda-forge=1
+  - libcblas=3.9.0
+  - ca-certificates
+  - packaging=21.3
+  - python=3.9.10
+  - setuptools=60.9.3
+  - libnsl=2.0.0
+  - pyqt5-sip=4.19.18
+  - pthread-stubs=0.4
+  - nss=3.74
   - zstd=1.5.2
-  - pip:
-    - cffi==1.15.0
-    - clarite==2.2.0
-    - click==8.0.4
-    - coloredlogs==15.0.1
-    - cyvcf2==0.30.15
-    - humanfriendly==10.0
-    - jinja2==3.0.3
-    - markupsafe==2.1.1
-    - pandas-genomics==0.11.0
-    - pycparser==2.21
-    - rpy2==3.4.5
-    - scipy==1.6.3
-    - statsmodels==0.12.2
-    - tzlocal==2.1
-prefix: /home/tomas/anaconda3/envs/farmer_welder
+  - libgfortran-ng=11.2.0
+  - alsa-lib=1.2.3
+  - libwebp=1.2.2
+  - libtiff=4.3.0
+  - libbrotlicommon=1.0.9
+  - libpng=1.6.37
+  - patsy=0.5.2
+  - openjpeg=2.4.0
+  - libpq=14.2
+  - seaborn=0.11.2
+  - six=1.16.0
+  - bzip2=1.0.8
+  - pip=22.0.4
+  - pyqtwebengine=5.12.1
+  - tornado=6.1
+  - libblas=3.9.0
+  - qt=5.12.9
+  - libbrotlidec=1.0.9
+  - pyparsing=3.0.7
+  - _openmp_mutex=4.5
+  - libffi=3.4.2
+  - libiconv=1.16
+  - kiwisolver=1.4.0
+  - gstreamer=1.18.5
+  - gettext=0.19.8.1
+  - matplotlib=3.5.1
+  - tzdata=2021e
+  - gst-plugins-base=1.18.5
+  - krb5=1.19.3
+  - libwebp-base=1.2.2
+  - xz=5.2.5
+  - libuuid=2.32.1
+  - tk=8.6.12
+  - xorg-libxdmcp=1.1.3
+  - pcre=8.45
+  - unicodedata2=14.0.0
+  - brotli-bin=1.0.9
+  - libclang=13.0.1
+  - keyutils=1.6.1
+  - expat=2.4.7
+  - pyqtchart=5.12
+  - seaborn-base=0.11.2
+  - threadpoolctl=3.1.0
+  - python-dateutil=2.8.2
+  - libxml2=2.9.12
+  - wheel=0.37.1
+  - readline=8.1
+  - jbig=2.1
+  - libgcc-ng=11.2.0
+  - fonttools=4.30.0
+  - fonts-conda-ecosystem=1
+  - dbus=1.13.6
+  - lcms2=2.12
+  - font-ttf-inconsolata=3.000
+  - libedit=3.1.20191231
+  - libvorbis=1.3.7
+  - pyqt-impl=5.12.3
+  - mysql-libs=8.0.28
+  - nspr=4.32
+  - ld_impl_linux-64=2.36.1
+  - font-ttf-ubuntu=0.83
+  - cycler=0.11.0
+  - numpy=1.22.3
+  - libopus=1.3.1
+  - pandas=1.4.1
+  - scikit-learn=1.0.2
+  - matplotlib-base=3.5.1
+  - zlib=1.2.11
+  - libopenblas=0.3.18
+  - brotli=1.0.9
+  - libllvm13=13.0.1
+  - libxkbcommon=1.0.3
+  - pyqt=5.12.3
+  - sqlite=3.37.0
+  - jpeg=9e
+  - libdeflate=1.10
+  - libogg=1.3.4
+  - pillow=9.0.1
+  - mysql-common=8.0.28
+  - lz4-c=1.9.3
+  - liblapack=3.9.0
+  - icu=69.1
+  - libxcb=1.13
+  - libzlib=1.2.11
+  - font-ttf-dejavu-sans-mono=2.37
+  - joblib=1.1.0
+  - libstdcxx-ng=11.2.0
+  - freetype=2.10.4
+  - libglib=2.70.2
+  - libbrotlienc=1.0.9
+  - python_abi=3.9
+  - ncurses=6.3
+  - fontconfig=2.13.96
+  - _libgcc_mutex=0.1
+  - font-ttf-source-code-pro=2.038
+  - openpyxl
+prefix: /home/tomas/miniconda3/envs/farmer_welder
