--- a/environment.yml
+++ b/environment.yml
@@ -5,121 +5,13 @@ channels:
   - r
   - defaults
 dependencies:
-  - lerc=3.0
-  - libevent=2.1.10
-  - libgomp=11.2.0
-  - libgfortran5=11.2.0
-  - giflib=5.2.1
-  - pytz=2021.3
-  - munkres=1.1.4
-  - openssl
-  - xorg-libxau=1.0.9
-  - certifi
-  - fonts-conda-forge=1
-  - libcblas=3.9.0
-  - ca-certificates
-  - packaging=21.3
-  - python=3.9.10
-  - setuptools=60.9.3
-  - libnsl=2.0.0
-  - pyqt5-sip=4.19.18
-  - pthread-stubs=0.4
-  - nss=3.74
-  - zstd=1.5.2
-  - libgfortran-ng=11.2.0
-  - alsa-lib=1.2.3
-  - libwebp=1.2.2
-  - libtiff=4.3.0
-  - libbrotlicommon=1.0.9
-  - libpng=1.6.37
-  - patsy=0.5.2
-  - openjpeg=2.4.0
-  - libpq=14.2
-  - seaborn=0.11.2
-  - six=1.16.0
-  - bzip2=1.0.8
-  - pip=22.0.4
-  - pyqtwebengine=5.12.1
-  - tornado=6.1
-  - libblas=3.9.0
-  - qt=5.12.9
-  - libbrotlidec=1.0.9
-  - pyparsing=3.0.7
-  - _openmp_mutex=4.5
-  - libffi=3.4.2
-  - libiconv=1.16
-  - kiwisolver=1.4.0
-  - gstreamer=1.18.5
-  - gettext=0.19.8.1
-  - matplotlib=3.5.1
-  - tzdata=2021e
-  - gst-plugins-base=1.18.5
-  - krb5=1.19.3
-  - libwebp-base=1.2.2
-  - xz=5.2.5
-  - libuuid=2.32.1
-  - tk=8.6.12
-  - xorg-libxdmcp=1.1.3
-  - pcre=8.45
-  - unicodedata2=14.0.0
-  - brotli-bin=1.0.9
-  - libclang=13.0.1
-  - keyutils=1.6.1
-  - expat=2.4.7
-  - pyqtchart=5.12
-  - seaborn-base=0.11.2
-  - threadpoolctl=3.1.0
-  - python-dateutil=2.8.2
-  - libxml2=2.9.12
-  - wheel=0.37.1
-  - readline=8.1
-  - jbig=2.1
-  - libgcc-ng=11.2.0
-  - fonttools=4.30.0
-  - fonts-conda-ecosystem=1
-  - dbus=1.13.6
-  - lcms2=2.12
-  - font-ttf-inconsolata=3.000
-  - libedit=3.1.20191231
-  - libvorbis=1.3.7
-  - pyqt-impl=5.12.3
-  - mysql-libs=8.0.28
-  - nspr=4.32
-  - ld_impl_linux-64=2.36.1
-  - font-ttf-ubuntu=0.83
-  - cycler=0.11.0
-  - numpy=1.22.3
-  - libopus=1.3.1
-  - pandas=1.4.1
-  - scikit-learn=1.0.2
-  - matplotlib-base=3.5.1
-  - zlib=1.2.11
-  - libopenblas=0.3.18
-  - brotli=1.0.9
-  - libllvm13=13.0.1
-  - libxkbcommon=1.0.3
-  - pyqt=5.12.3
-  - sqlite=3.37.0
-  - jpeg=9e
-  - libdeflate=1.10
-  - libogg=1.3.4
-  - pillow=9.0.1
-  - mysql-common=8.0.28
-  - lz4-c=1.9.3
-  - liblapack=3.9.0
-  - icu=69.1
-  - libxcb=1.13
-  - libzlib=1.2.11
-  - font-ttf-dejavu-sans-mono=2.37
-  - joblib=1.1.0
-  - libstdcxx-ng=11.2.0
-  - freetype=2.10.4
-  - libglib=2.70.2
-  - libbrotlienc=1.0.9
-  - python_abi=3.9
-  - ncurses=6.3
-  - fontconfig=2.13.96
-  - _libgcc_mutex=0.1
-  - font-ttf-source-code-pro=2.038
+  - python<=3.9
+  - numpy
+  - pandas
+  - matplotlib
+  - scikit-learn
   - openpyxl
-prefix: /home/tomas/miniconda3/envs/farmer_welder
+  - rpy2
+  - pip
+  - pip:
+    - clarite
