--- a/environment.yml
+++ b/environment.yml
@@ -3,10 +3,11 @@ channels:
   - conda-forge
 dependencies:
   - python<=3.9
-  - numpy
-  - pandas
-  - matplotlib
-  - scikit-learn
+  - numpy>=1.23
+  - pandas>=1.5
+  - matplotlib>=3.6
+  - scikit-learn>=1.1.2
+  - statsmodels=0.13.2
   - openpyxl
   - rpy2
   - pip
