--- a/environment.yml
+++ b/environment.yml
@@ -1,15 +1,6 @@
 name: farmer_welder
-channels:
-  - conda-forge
 dependencies:
   - python<=3.9
-  - numpy>=1.23
-  - pandas>=1.5
-  - matplotlib>=3.6
-  - scikit-learn>=1.1.2
-  - statsmodels=0.13.2
-  - openpyxl
-  - rpy2
-  - pip
-  - pip:
-    - clarite
+  - poetry>1.1
+  - r-base=4.2.2
+  - setuptools>65
